# path-tracer

./: .gitignore  CMakeLists.txt  README.md  pathtracer.cpp  scene1.ppm  scene2.ppm
include/: Camera.h  CookTorrance.h  Dielectric.h  Hittable.h  IdealSpecular.h  Lambert.h  Material.h  ModifiedPhong.h  Phong.h  Plane.h  Ray.h  Scene.h  Sphere.h  Texture.h  Triangle.h  sample.h  utility.h  vec3.h
src/: a.out  legacy.cpp  main.cpp
